# savage

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  savage.py
examples/: readme.md
examples/example_1/: generate.py
examples/example_2/: generate.py
examples/example_3/: generate.py
examples/example_4/: generate.py
examples/example_5/: generate.py
savage/: __init__.py  graphic.py
savage/elements/: __init__.py  circle.py  element.py  ellipse.py  group.py  line.py  rect.py  text.py
savage/elements/shapes/: __init__.py  circle.py  ellipse.py  line.py  polygon.py  polyline.py  rect.py  shape.py
tests/: __init__.py  test_circle.py  test_element.py  test_graphic.py  test_group.py  test_rect.py  test_text.py
tests/test_elements/: test_element.py  test_group.py  test_text.py
tests/test_elements/test_shapes/: test_circle.py  test_ellipse.py  test_line.py  test_polygon.py  test_polyline.py  test_rect.py  test_shape.py
