[project]
name = "savage"
version = "0.1.0"
description = "A basic SVG generator in Python"
authors = [{name = "Jamie Gillett", email = "jamie.gillett@gmail.com"}]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["savage"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
addopts = [
    "--import-mode=importlib",
    "-ra",
    "-q",
]
testpaths = ["tests"]